--- a/encapsulation/encapsulation/encapsulation.vcxproj
+++ b/encapsulation/encapsulation/encapsulation.vcxproj
@@ -137,7 +137,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Déplacement.cpp" />
+    <ClCompile Include="Ennemy.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -146,7 +146,7 @@
     <None Include="Etitypp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Déplacement.h" />
+    <ClInclude Include="Ennemy.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
