--- a/encapsulation/encapsulation/encapsulation.vcxproj
+++ b/encapsulation/encapsulation/encapsulation.vcxproj
@@ -137,17 +137,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Ennemy.cpp" />
+    <ClCompile Include="ChaserEnemy.cpp" />
+    <ClCompile Include="collision.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PatrollingEnemy.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Etitypp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Ennemy.h" />
+    <ClInclude Include="ChaserEnemy.h" />
+    <ClInclude Include="collision.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="PatrollingEnemy.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
