--- a/encapsulation/encapsulation/encapsulation.vcxproj
+++ b/encapsulation/encapsulation/encapsulation.vcxproj
@@ -139,6 +139,7 @@
   <ItemGroup>
     <ClCompile Include="ChaserEnemy.cpp" />
     <ClCompile Include="collision.cpp" />
+    <ClCompile Include="door.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="main.cpp" />
@@ -151,6 +152,7 @@
   <ItemGroup>
     <ClInclude Include="ChaserEnemy.h" />
     <ClInclude Include="collision.h" />
+    <ClInclude Include="door.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="PatrollingEnemy.h" />
